--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run MLflow Project
       shell: bash -l {0}
-      working-directory: ..
+      working-directory: MLProject
       run: |
         mlflow run . -P data_path=mobile_price_classification_preprocessing.csv
 
