--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,10 @@ jobs:
       shell: bash -l {0}
       working-directory: MLProject
       run: |
-        mlflow models build-docker -m ./mlruns/0/last_run_id/artifacts/random_forest_model -n random-forest-model:latest
+        RUN_DIR=$(ls -td ./mlruns/0/*/ | head -1)
+        MODEL_PATH="$RUN_DIR/artifacts/random_forest_model"
+
+        mlflow models build-docker -m "$MODEL_PATH" -n random-forest-model:latest
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
