--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,14 +45,17 @@ jobs:
         name: mobile-price-class-model
         path: MLProject/mlruns/
 
+    - name: Download latest model artifact from DagsHub
+      shell: bash -l {0}
+      working-directory: MLProject
+      run: |
+        python download_model.py
+
     - name: Build Docker image with MLflow
       shell: bash -l {0}
       working-directory: MLProject
       run: |
-        RUN_DIR=$(ls -td ./mlruns/0/*/ | head -1)
-        MODEL_PATH="$RUN_DIR/artifacts/random_forest_model"
-
-        mlflow models build-docker -m "$MODEL_PATH" -n random-forest-model:latest
+        mlflow models build-docker -m downloaded_model -n random-forest-model:latest
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
