--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,18 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
+    - name: Update conda and configure channels
+      run: |
+        conda config --add channels conda-forge
+        conda config --set channel_priority strict
+        conda update -n base -c defaults conda
+
     - name: Set up Miniconda
       uses: conda-incubator/setup-miniconda@v3
       with:
         activate-environment: mlfow-env
         environment-file: MLProject/conda.yaml
-        python-version: 3.12
+        python-version: 3.10
 
     - name: Install MLflow CLI
       shell: bash -l {0}
