--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         activate-environment: mlfow-env
         environment-file: MLProject/conda.yaml
-        python-version: 3.10.*
+        python-version: 3.10
 
     - name: Install MLflow CLI
       shell: bash -l {0}
@@ -44,18 +44,25 @@ jobs:
       run: |
         mlflow run . -P data_path=mobile_price_classification_preprocessing.csv
 
-    - name: Upload model artifact
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: mobile-price-class-model
-        path: MLProject/mlruns/
+    # - name: Upload model artifact
+    #   if: always()
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: mobile-price-class-model
+    #     path: MLProject/mlruns/
 
     - name: Download latest model artifact from DagsHub
       shell: bash -l {0}
       working-directory: MLProject
       run: |
         python download_model.py
+
+    - name: Debug model artifact files
+      shell: bash -l {0}
+      working-directory: MLProject
+      run: |
+        ls -R downloaded_model/model
+        cat downloaded_model/model/conda.yaml
 
     - name: Build Docker image with MLflow
       shell: bash -l {0}
