--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -3,7 +3,7 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.10.*
+  - python=3.10
   - pip
   - pip:
       - mlflow==2.12.2
