--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       shell: bash -l {0}
       working-directory: MLProject
       run: |
-        mlflow models build-docker -m downloaded_model/model -n random-forest-model:latest
+        mlflow models build-docker -m downloaded_model/model --docker-base-image=python:3.10-slim -n random-forest-model:latest
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
