--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,18 +57,23 @@ jobs:
       run: |
         python download_model.py
 
-    - name: Debug model artifact files
+    - name: Generate Dockerfile 
       shell: bash -l {0}
       working-directory: MLProject
       run: |
-        ls -R downloaded_model/model
-        cat downloaded_model/model/conda.yaml
+        mlflow models generate-dockerfile -m downloaded_model/model
 
-    - name: Build Docker image with MLflow
-      shell: bash -l {0}
+    - name: Patch Dockerfile to use python3.10
+      working-directory: MLProject/downloaded_model/model
+      run: |
+        sed -i 's/python3.8/python3.10/g' Dockerfile
+        sed -i 's/python3.8-distutils/python3.10-distutils/g' Dockerfile
+        sed -i 's/python \/tmp\/get-pip.py/python3.10 \/tmp\/get-pip.py/g' Dockerfile
+
+    - name: Build Docker image
       working-directory: MLProject
       run: |
-        mlflow models build-docker -m downloaded_model/model --docker-base-image=python:3.10-slim -n random-forest-model:latest
+        docker build -t random-forest-model:latest -f downloaded_model/model/Dockerfile downloaded_model/model
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
