--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         mlflow models generate-dockerfile -m downloaded_model/model
 
     - name: Patch Dockerfile to use python3.10
-      working-directory: MLProject/downloaded_model/model
+      working-directory: MLProject
       run: |
         sed -i 's/python3.8/python3.10/g' Dockerfile
         sed -i 's/python3.8-distutils/python3.10-distutils/g' Dockerfile
